--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
     "prop-types": "^15.8.1",
@@ -17,8 +18,11 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-rating": "^2.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.11.1",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
